# oneMonitor

./: CHANGELOG.md  ProprietaryLicense  pyproject.toml
.github/workflows/: release.yaml
onemonitor/: server.py  server.toml.example  web.py  web.toml.example  worker.py  worker.toml.example
