[tool.poetry]
name = "onemonitor"
version = "0.2.0"
description = ""
authors = ["Illustar0 <me@illustar0.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
zzupy = "^0.2.0"
streamlit = "^1.41.1"
sqlalchemy = "^2.0.36"
toml = "^0.10.2"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
plotly = "^5.24.1"
loguru = "^0.7.3"
streamlit-authenticator = "^0.4.1"
pushx = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]